--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.development.js"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
